<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_main"
        android:textSize="24sp"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/btnDisable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_disable" />

    <Button
        android:id="@+id/btnEnable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_enable"
        android:layout_marginTop="16dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#CCCCCC"
        android:layout_marginVertical="24dp"/>

    <Button
        android:id="@+id/btnDisableAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_disable_google" />

    <Button
        android:id="@+id/btnEnableAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_enable_google"
        android:layout_marginTop="16dp"/>

</LinearLayout>
